--- a/style.css
+++ b/style.css
@@ -3,8 +3,18 @@ body {
   background-color: rgb(19, 22, 30);
   color: rgb(183, 183, 179);
   font-size: 20px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
   padding-left: 2vw;
   padding-right: 2vw;
 }
@@ -148,4 +158,92 @@ p {
 .code--block.html::before {
   background-color: #00599c;
   color: #fff;
+}
+
+.subtopic {
+  padding: 12px 16px;
+  margin: 12px 0;
+  border-radius: 8px;
+  border: 2px dashed rgb(36, 2, 98);
+  background: linear-gradient(
+    90deg,
+    rgb(47, 5, 125) 0%,
+    rgb(47, 5, 125) 8px,
+    transparent 8px
+  );
+}
+
+.exam--card {
+  background-color: rgb(21, 26, 35);
+  padding: 2%;
+  border-radius: 12px;
+  border: 2px solid rgb(47, 5, 125);
+  margin: 2%;
+  /* border-color: bisque; */
+}
+
+/* HTML/CSS — оранжевая рамка */
+.section.html-css .exam--card {
+  border-color: rgb(255, 140, 0);
+}
+
+.section.js .exam--card {
+  border-color: rgb(255, 1, 77);
+  box-shadow: 0 0 10px rgba(255, 1, 77, 0.6);
+}
+
+/* Vue — зелёная рамка */
+.section.vue .exam--card {
+  border-color: rgb(50, 190, 131);
+  box-shadow: 0 0 10px rgba(16, 251, 8, 0.6);
+}
+
+/* Практика — синяя рамка */
+.section.practice .exam--card {
+  border-color: rgb(0, 123, 255);
+}
+
+/* HTML/CSS — оранжевые подтемы */
+.section.html-css .subtopic {
+  border-color: rgb(255, 140, 0);
+  background: linear-gradient(
+    90deg,
+    rgb(255, 140, 0) 0%,
+    rgb(255, 140, 0) 8px,
+    transparent 8px
+  );
+}
+
+/* JS — неоново-розовые подтемы */
+.section.js .subtopic {
+  border-color: rgb(255, 1, 77);
+  background: linear-gradient(
+    90deg,
+    rgb(255, 1, 77) 0%,
+    rgb(255, 1, 77) 8px,
+    transparent 8px
+  );
+}
+
+/* Vue — зелёные подтемы */
+.section.vue .subtopic {
+  border-color: rgb(50, 190, 131);
+  background: linear-gradient(
+    90deg,
+    rgb(50, 190, 131) 0%,
+    rgb(50, 190, 131) 8px,
+    transparent 8px
+  );
+  box-shadow: 0 0 10px rgba(16, 251, 8, 0.6);
+}
+
+/* Практика — синие подтемы */
+.section.practice .subtopic {
+  border-color: rgb(0, 123, 255);
+  background: linear-gradient(
+    90deg,
+    rgb(0, 123, 255) 0%,
+    rgb(0, 123, 255) 8px,
+    transparent 8px
+  );
 }
